# crypto-bot

./: .gitignore  .gitlab-ci.yml  AGENTS.md  CLAUDE.md  Dockerfile  Position.py  README-DASHBOARD.md  README.md  RSI_Analyzer.py  __init__.py  analyzer-parameters.example.json  analyzer.py  auth.example.json  backtest.py  bot-parameters.json  bot.py  config.example.py  config.py  credentials example.json  credentials.example.json  crypto.py  crypto_report.py  docker-compose.yml  exchange_info.json  exclude-coins.example.json  file_based_asset_positions.py  file_based_record.py  get_all_tickers.json  get_data.py  portfolio_summary.py  position.py  pyproject.toml  requirements.txt  run_portfolio_summary.sh  run_tests.py  save_data.py  send_order.py  start-dashboard.bat  start-dashboard.sh  trade_loop.py  (+1 more)
Analyzer/: RSI_Analyzer.py  WILLR_Analyzer.py  __init__.py  analyzer.py
analyzer/: DCA_Analyzer.py  DCA_Buy_Analyzer.py  DCA_Sell_Analyzer.py  RSI_Analyzer.py  WILLR_Analyzer.py  analyzer.py
asset_record_platforms/: file_based_asset_positions.py  position.py
bot_env_config/: config.py
dashboard/: README.md
exchange_api_wrappers/: binance_klines.py  binance_trading.py  crypto.py  mock_trading.py  wrapped_data.py
notification_platforms/: bot_abc.py  discord_bot.py  queue_task.py  telegram_bot.py
tests/: README.md  test_file_based_asset_positions.py  test_mock_trading.py
user-config/: analyzer-parameters.example.json  auth.example.json  (+4 more)
user-config-sample/: analyzer.example.json  auth.example.json  logging.example.ini  position-manage.example.json
(+19 files in other folders)
