[tool.poetry]
name = "crypto-bot"
version = "0.3.0"
description = ""
authors = ["ukewea <60734042+ukewea@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "crypto_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
python-binance = "^1.0.19"
numpy = "^1.26.0"
TA-Lib = "^0.6.5"
python-telegram-bot = "^21.0"
pygsheets = "^2.0.6"
pandas = "^2.2.0"
discord-py = "^2.4.0"
backtrader = "^1.9.78.123"

[tool.poetry.group.dev.dependencies]
black = "^24.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
